--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mongoose": "^7.4.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
     "path": "^0.12.7"
